--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -4,7 +4,7 @@
         width: 5rem;
         height: 5rem;
         border-radius: 50%;
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         margin: 2rem;
